--- a/src/website_assets/assets/main.css
+++ b/src/website_assets/assets/main.css
@@ -26,12 +26,9 @@ button[type="submit"] {
     float: right;
 }
 
-#greeting {
+#storyText {
     margin: 10px auto;
     padding: 10px 60px;
     border: 1px solid #222;
 }
 
-#greeting:empty {
-    display: none;
-}
